translated postop staff

--- a/es/hub/transplant/postop/staff/dietitian.html
+++ b/es/hub/transplant/postop/staff/dietitian.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op Staff: Dietitian</title>
+  <title>Personal Post-Operación: Nutricionista</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -17,49 +17,50 @@
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
-<h1>Dietitian</h1>
+<h1>Nutricionista</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The dietitian aligns food with your medicines and labs. They focus on food safety early on,
-  steady energy for healing, blood pressure, blood sugar, and a healthy weight.
+  El/la nutricionista alinea la alimentación con tus medicamentos y análisis de laboratorio. 
+  Se enfoca en la seguridad alimentaria en los primeros meses, en mantener energía estable para sanar, 
+  en la presión arterial, el azúcar en la sangre y un peso saludable.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>Food safety:</strong> safe prep while you’re immunosuppressed (cook meats/eggs fully, rinse produce, avoid unpasteurized items).</li>
-  <li><strong>Healing nutrition:</strong> set protein and calorie goals to rebuild strength after surgery.</li>
-  <li><strong>Blood pressure & fluids:</strong> lower-sodium habits and steady hydration targets from your team.</li>
-  <li><strong>Blood sugar support:</strong> simple plans if steroids or meds raise glucose.</li>
-  <li><strong>Lab-guided tweaks:</strong> adjust potassium, magnesium, and phosphorus through food when appropriate.</li>
+  <li><strong>Seguridad alimentaria:</strong> preparación segura mientras estés inmunosuprimido/a (cocinar carnes y huevos completamente, enjuagar frutas y verduras, evitar productos no pasteurizados).</li>
+  <li><strong>Nutrición para la recuperación:</strong> establecer metas de proteína y calorías para recuperar fuerza después de la cirugía.</li>
+  <li><strong>Presión arterial y líquidos:</strong> hábitos bajos en sodio e hidratación estable según lo que indique tu equipo.</li>
+  <li><strong>Control de glucosa:</strong> planes simples si los esteroides u otros medicamentos elevan el azúcar.</li>
+  <li><strong>Ajustes guiados por laboratorios:</strong> modificar potasio, magnesio y fósforo a través de la dieta cuando corresponda.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas que atiende</h2>
 <ul>
-  <li>Poor appetite, nausea, taste changes, early fullness.</li>
-  <li>Weight gain or loss, muscle loss, low energy.</li>
-  <li>High BP, higher sugars, or cholesterol concerns after transplant.</li>
-  <li>Electrolyte ups/downs tied to meds or hydration.</li>
+  <li>Falta de apetito, náuseas, cambios en el gusto, llenura temprana.</li>
+  <li>Aumento o pérdida de peso, pérdida de masa muscular, baja energía.</li>
+  <li>Presión arterial alta, azúcares elevados o colesterol después del trasplante.</li>
+  <li>Alteraciones de electrolitos relacionadas con medicamentos o hidratación.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a él/ella</h2>
 <ul>
-  <li>Early after transplant and any time your weight, BP, sugars, or labs drift.</li>
-  <li>Before starting supplements or “detox/cleanse” plans.</li>
-  <li>When travel, work shifts, or appetite make your routine hard.</li>
-  <li><strong>Come prepared:</strong> a 3-day food log (photos are fine), home BP/weight, recent labs, and questions.</li>
+  <li>Poco después del trasplante y cada vez que tu peso, presión arterial, azúcares o laboratorios se desvíen.</li>
+  <li>Antes de comenzar suplementos o planes de “detox/limpieza”.</li>
+  <li>Cuando los viajes, turnos de trabajo o falta de apetito dificulten tu rutina.</li>
+  <li><strong>Prepárate:</strong> un registro de alimentos de 3 días (fotos sirven), presión/ peso en casa, laboratorios recientes y preguntas.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no maneja (límites)</h2>
 <ul>
-  <li>They don’t change prescriptions or dose meds — that’s your clinical team.</li>
-  <li>They don’t resolve insurance/copay issues — financial coordinator/insurer.</li>
-  <li>They don’t clear food–drug interactions alone — confirm with your pharmacist/provider.</li>
+  <li>No cambia recetas ni ajusta medicamentos — eso corresponde a tu equipo clínico.</li>
+  <li>No resuelve temas de seguro o copagos — eso es del coordinador financiero/aseguradora.</li>
+  <li>No confirma interacciones alimento–medicamento por sí solo/a — eso se valida con tu farmacéutico/proveedor.</li>
 </ul>
-
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
