--- a/es/hub/transplant/postop/staff/index.html
+++ b/es/hub/transplant/postop/staff/index.html
@@ -12,7 +12,7 @@
   </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Transplant Staff - Kidney Transplant Hub</title>
+  <title>Personal Post-Operación - Centro de Trasplante de Riñón</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,38 +25,37 @@
   <main class="content" id="main">
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
-<div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
+    <div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
 
-<h1>Post-Op Staff</h1>
-<p>After transplant, this crew watches your labs, tunes medicines, and helps you get back to normal life. Meet the people you’ll see most often.</p>
+<h1>Personal Post-Operación</h1>
+<p>Después del trasplante, este equipo revisa tus análisis, ajusta tus medicamentos y te ayuda a volver a la vida normal. Conoce a las personas que verás con más frecuencia.</p>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/postop/staff/nephrologist.html" data-evt="postop-staff:nephrologist">Transplant Nephrologist</a></h2>
-  <p>Leads medical care after transplant and adjusts anti-rejection meds based on labs and symptoms.</p>
+  <h2><a href="/es/hub/transplant/postop/staff/nephrologist.html" data-evt="postop-staff:nephrologist">Nefrólogo/a de Trasplante</a></h2>
+  <p>Dirige la atención médica después del trasplante y ajusta los medicamentos antirrechazo según los análisis y síntomas.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/postop/staff/pharmacist.html" data-evt="postop-staff:pharmacist">Transplant Pharmacist</a></h2>
-  <p>Checks drug levels, looks for interactions, teaches timing (e.g., trough labs), and helps with refills/PA.</p>
+  <h2><a href="/es/hub/transplant/postop/staff/pharmacist.html" data-evt="postop-staff:pharmacist">Farmacéutico/a de Trasplante</a></h2>
+  <p>Verifica niveles de medicamentos, busca interacciones, enseña sobre el momento de los análisis (por ejemplo, niveles valle) y ayuda con recetas/reautorizaciones.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/postop/staff/nurse-coordinator.html" data-evt="postop-staff:nurse">Nurse Coordinator</a></h2>
-  <p>Your first call for symptoms, scheduling, refills, and “who do I call?” triage.</p>
+  <h2><a href="/es/hub/transplant/postop/staff/nurse-coordinator.html" data-evt="postop-staff:nurse">Enfermero/a Coordinador/a</a></h2>
+  <p>Tu primer contacto para síntomas, programación, recetas y orientación sobre “¿a quién debo llamar?”.</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/postop/staff/dietitian.html" data-evt="postop-staff:dietitian">Dietitian</a></h2>
-  <p>Food safety, protein/calorie goals, salt and sugar plans, and lab-guided tweaks (potassium, magnesium).</p>
+  <h2><a href="/es/hub/transplant/postop/staff/dietitian.html" data-evt="postop-staff:dietitian">Nutricionista</a></h2>
+  <p>Seguridad alimentaria, metas de proteínas y calorías, planes de sal y azúcar, y ajustes guiados por laboratorios (potasio, magnesio).</p>
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/es/hub/transplant/postop/staff/social-worker.html" data-evt="postop-staff:social-worker">Social Worker</a></h2>
-  <p>Coping support, work/benefits paperwork, caregiver resources, and practical problem-solving.</p>
+  <h2><a href="/es/hub/transplant/postop/staff/social-worker.html" data-evt="postop-staff:social-worker">Trabajador/a Social</a></h2>
+  <p>Apoyo emocional, trámites de trabajo/beneficios, recursos para cuidadores y soluciones prácticas a problemas.</p>
 </section>
 
-<p class="disclaimer">Informational only; roles vary by center.</p>
-
+<p class="disclaimer">Solo con fines informativos; los roles varían según el centro.</p>
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
