--- a/es/hub/transplant/postop/staff/nephrologist.html
+++ b/es/hub/transplant/postop/staff/nephrologist.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op Staff: Transplant Nephrologist</title>
+  <title>Personal Post-Op: Nefrólogo/a de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -17,50 +17,50 @@
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
-<h1>Nephrologist</h1>
 
-<h2>Short Description</h2>
+<h1>Nefrólogo/a de Trasplante</h1>
+
+<h2>Descripción Breve</h2>
 <p>
-  The transplant nephrologist leads your medical care after surgery. They track labs, tune anti-rejection
-  medicines, catch problems early, and guide long-term kidney health.
+  El nefrólogo de trasplante dirige tu atención médica después de la cirugía. Supervisa los análisis,
+  ajusta los medicamentos antirrechazo, detecta problemas de manera temprana y guía tu salud renal a largo plazo.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades Principales</h2>
 <ul>
-  <li><strong>Immunosuppression tuning:</strong> adjust anti-rejection doses based on drug levels, creatinine, and symptoms.</li>
-  <li><strong>Lab & vitals oversight:</strong> watch creatinine/eGFR, urine output, electrolytes, blood pressure, and weight.</li>
-  <li><strong>Problem detection:</strong> sort out dehydration vs. rejection vs. medication side effects; order tests/biopsy if needed.</li>
-  <li><strong>Whole-health management:</strong> treat BP, sugar, cholesterol, anemia, and bone/mineral issues that affect graft health.</li>
-  <li><strong>Follow-up plan:</strong> set visit/lab frequency and clear thresholds for calling early.</li>
+  <li><strong>Ajuste de inmunosupresión:</strong> modifica dosis según niveles de medicamento, creatinina y síntomas.</li>
+  <li><strong>Supervisión de análisis y signos vitales:</strong> controla creatinina/eGFR, producción de orina, electrolitos, presión arterial y peso.</li>
+  <li><strong>Detección de problemas:</strong> diferencia entre deshidratación, rechazo o efectos secundarios de medicamentos; pide pruebas/biopsia si es necesario.</li>
+  <li><strong>Manejo integral:</strong> trata presión arterial, glucosa, colesterol, anemia y salud ósea/mineral que afectan al injerto.</li>
+  <li><strong>Plan de seguimiento:</strong> define la frecuencia de visitas/análisis y establece umbrales claros para llamar temprano.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas Que Atiende</h2>
 <ul>
-  <li>Rising creatinine, falling urine, rapid weight gain/swelling, or new pain over the kidney.</li>
-  <li>Abnormal drug levels, tremor, headaches, stomach upset/diarrhea, or sleep/mood changes from medicines.</li>
-  <li>Electrolyte drifts (potassium/magnesium), high BP, dizziness from over-diuresis, or dehydration.</li>
-  <li>Infection risk planning and vaccine timing (non-live vaccines).</li>
+  <li>Subida de creatinina, menos orina, aumento rápido de peso/hinchazón o nuevo dolor sobre el riñón.</li>
+  <li>Niveles anormales de medicamentos, temblores, dolores de cabeza, malestar estomacal/diarrea o cambios de ánimo/sueño.</li>
+  <li>Desequilibrios de electrolitos (potasio/magnesio), presión alta, mareos por exceso de diuréticos o deshidratación.</li>
+  <li>Planificación para riesgo de infecciones y calendario de vacunas (no vivas).</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo Acudir a Él/Ella</h2>
 <ul>
-  <li><strong>Early months:</strong> very frequent visits/labs, then spaced out as things stabilize.</li>
-  <li><strong>Call promptly for:</strong> fever, vomiting that affects meds, less urine, sudden swelling/weight gain, new wound redness/drainage.</li>
-  <li><strong>Before new meds/supplements:</strong> check for interactions that change drug levels.</li>
-  <li><strong>Bring to visits:</strong> exact med schedule with last dose times, home BP/weight logs, recent outside records (ER/urgent care), and questions.</li>
+  <li><strong>Primeros meses:</strong> visitas y análisis muy frecuentes, que se van espaciando al estabilizarse.</li>
+  <li><strong>Llamar de inmediato por:</strong> fiebre, vómitos que impidan tomar medicinas, menos orina, hinchazón repentina/aumento de peso, enrojecimiento o secreción en la herida.</li>
+  <li><strong>Antes de nuevos medicamentos o suplementos:</strong> verificar interacciones que cambien niveles.</li>
+  <li><strong>Traer a las visitas:</strong> horario exacto de medicinas con la última hora de dosis, registros de presión/peso en casa, informes recientes de urgencias y preguntas.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo Que No Maneja (Límites)</h2>
 <ul>
-  <li>Day-to-day scheduling, refills logistics, or paperwork — nurse coordinator/social worker.</li>
-  <li>Insurance approvals and detailed cost questions — financial coordinator/insurer.</li>
-  <li>Early surgical wound/drain decisions — surgeon team.</li>
+  <li>Programación diaria, recetas o papeleo — corresponde al coordinador/a de enfermería o trabajador/a social.</li>
+  <li>Aprobaciones de seguros o costos detallados — coordinador/a financiero o aseguradora.</li>
+  <li>Decisiones tempranas sobre heridas o drenajes quirúrgicos — equipo de cirugía.</li>
 </ul>
-
-
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
