--- a/es/hub/transplant/postop/staff/nurse-coordinator.html
+++ b/es/hub/transplant/postop/staff/nurse-coordinator.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op Staff: Nurse Coordinator</title>
+  <title>Personal Post-Op: Coordinador/a de Enfermería</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -17,51 +17,52 @@
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
-<h1>Nurse Coordinator</h1>
 
-<h2>Short Description</h2>
+<h1>Coordinador/a de Enfermería</h1>
+
+<h2>Descripción Breve</h2>
 <p>
-  The nurse coordinator is your first call after transplant. They triage symptoms, arrange labs and visits,
-  manage refills, translate instructions into plain English, and route you to the right clinician fast.
+  El coordinador de enfermería es tu primer contacto después del trasplante. Atiende síntomas, organiza análisis y visitas,
+  gestiona recetas, traduce instrucciones a un lenguaje claro y te dirige rápidamente al especialista adecuado.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades Principales</h2>
 <ul>
-  <li><strong>Triage & next steps:</strong> decide if something needs home care, a same-day lab, a clinic visit, or the ER.</li>
-  <li><strong>Labs & scheduling:</strong> place standing orders (e.g., troughs before morning dose), book clinic, imaging, or biopsy.</li>
-  <li><strong>Medication flow:</strong> process refills, prior-auth follow-ups, pharmacy routing, and clarify timing around labs.</li>
-  <li><strong>Education:</strong> wound care basics, activity/lifting limits, hydration goals, and what to watch for.</li>
-  <li><strong>Care coordination:</strong> loop in your nephrologist, pharmacist, surgeon team, or social work as needed.</li>
+  <li><strong>Triaje y próximos pasos:</strong> decidir si algo requiere cuidados en casa, análisis el mismo día, visita en clínica o urgencias.</li>
+  <li><strong>Análisis y programación:</strong> ordenar análisis (ej. niveles antes de la dosis matutina), agendar clínica, imágenes o biopsias.</li>
+  <li><strong>Flujo de medicación:</strong> tramitar recetas, autorizaciones previas, coordinación con farmacia y aclarar tiempos respecto a análisis.</li>
+  <li><strong>Educación:</strong> cuidados básicos de la herida, límites de actividad/carga, metas de hidratación y signos de alerta.</li>
+  <li><strong>Coordinación de cuidados:</strong> involucrar a tu nefrólogo, farmacéutico, cirujano o trabajador social según se necesite.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas Que Atiende</h2>
 <ul>
-  <li><strong>Symptoms:</strong> fever, GI upset, less urine, swelling/rapid weight gain, wound redness or drainage, high BP.</li>
-  <li><strong>Lab logistics:</strong> missing orders, “do I take meds before labs?”, when and where to draw, how results are shared.</li>
-  <li><strong>Refills:</strong> running low, specialty pharmacy delays, mail-order hiccups, travel overrides.</li>
-  <li><strong>After-hours or outside care:</strong> you were seen in an ER/urgent care—what to do next and what records they need.</li>
+  <li><strong>Síntomas:</strong> fiebre, malestar gastrointestinal, menos orina, hinchazón/aumento rápido de peso, enrojecimiento o secreción en la herida, presión alta.</li>
+  <li><strong>Logística de análisis:</strong> órdenes faltantes, dudas sobre si tomar medicinas antes, cuándo y dónde hacerlos, cómo se entregan los resultados.</li>
+  <li><strong>Recetas:</strong> quedarse sin medicinas, retrasos en farmacia especializada, problemas con pedidos por correo, sobres por viaje.</li>
+  <li><strong>Atención fuera de horario o externa:</strong> si te atendieron en urgencias, qué hacer después y qué informes necesita el equipo.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo Acudir a Él/Ella</h2>
 <ul>
-  <li><strong>New or worsening symptoms</strong> (not a 911 level emergency): call for triage and clear instructions.</li>
-  <li><strong>Before labs</strong> when timing is unclear (e.g., trough draw before the morning dose).</li>
-  <li><strong>Refills</strong>: request with a few business days’ lead time; sooner for specialty meds.</li>
-  <li><strong>Planning travel</strong>: lab schedule, extra doses, and what to do across time zones.</li>
-  <li><strong>Efficient call/message:</strong> have your med list with times, last doses, home BP/weight, pharmacy info, and symptom timeline.</li>
+  <li><strong>Síntomas nuevos o en empeoramiento</strong> (no de emergencia 911): llamar para triaje e instrucciones claras.</li>
+  <li><strong>Antes de análisis</strong> cuando el horario es incierto (ej. niveles antes de la dosis matutina).</li>
+  <li><strong>Recetas:</strong> pedir con algunos días hábiles de anticipación; más tiempo para medicinas especiales.</li>
+  <li><strong>Al planear viajes:</strong> programación de análisis, dosis extra y manejo de horarios entre zonas.</li>
+  <li><strong>Para llamadas/mensajes eficientes:</strong> ten tu lista de medicinas con horarios, última dosis, registros de presión/peso en casa, datos de farmacia y línea de tiempo de síntomas.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo Que No Maneja (Límites)</h2>
 <ul>
-  <li>Final diagnoses and dose changes — those come from your provider.</li>
-  <li>Insurance approvals, copays, billing questions — financial coordinator/insurer.</li>
-  <li>Ongoing counseling or complex social needs — social worker.</li>
-  <li>Emergencies (chest pain, severe breathing trouble, confusion) — use 911 or ER per on-call guidance.</li>
+  <li>Diagnósticos finales y cambios de dosis — corresponden a tu proveedor.</li>
+  <li>Aprobaciones de seguros, copagos y facturación — coordinador financiero/aseguradora.</li>
+  <li>Consejería continua o necesidades sociales complejas — trabajador social.</li>
+  <li>Emergencias (dolor de pecho, dificultad respiratoria grave, confusión) — llamar al 911 o acudir a urgencias según la indicación del equipo de guardia.</li>
 </ul>
-
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
