--- a/es/hub/transplant/postop/staff/pharmacist.html
+++ b/es/hub/transplant/postop/staff/pharmacist.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op Staff: Transplant Pharmacist</title>
+  <title>Personal Postoperatorio: Farmacéutico de Trasplante</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -17,52 +17,51 @@
     <div data-include="/includes_es/transplant-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
-<h1>Pharmacist</h1>
+<h1>Farmacéutico de Trasplante</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The transplant pharmacist keeps your medicines safe, effective, and doable. They watch drug levels,
-  prevent interactions, fine-tune timing, and keep refills moving so you never miss a dose.
+  El farmacéutico de trasplante se asegura de que tus medicamentos sean seguros, efectivos y fáciles de seguir. Vigila los niveles en sangre,
+  previene interacciones, ajusta horarios y mantiene las recetas al día para que nunca falte una dosis.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li><strong>Level management:</strong> confirm trough timing (labs drawn before the morning dose), explain targets, and recommend dose changes to your provider.</li>
-  <li><strong>Interaction checks:</strong> screen prescriptions, OTCs, and supplements; flag problem foods (e.g., grapefruit, Seville orange, pomelo).</li>
-  <li><strong>Timing & adherence:</strong> set alarms, simplify schedules when possible, plan time-zone changes for travel.</li>
-  <li><strong>Access & cost:</strong> coordinate prior auths, specialty pharmacy, bridge supplies, and cost-saving options.</li>
-  <li><strong>Side-effect support:</strong> practical strategies for tremor, GI upset, headaches, sleep/mood changes—escalating to the provider when needed.</li>
+  <li><strong>Manejo de niveles:</strong> confirmar la toma en ayunas (análisis antes de la dosis matutina), explicar los valores meta y recomendar ajustes al proveedor.</li>
+  <li><strong>Revisión de interacciones:</strong> evaluar recetas, medicamentos de venta libre y suplementos; señalar alimentos problemáticos (ej. toronja, naranja de Sevilla, pomelo).</li>
+  <li><strong>Horario y adherencia:</strong> ayudarte a poner alarmas, simplificar horarios cuando se pueda y planear cambios de zona horaria al viajar.</li>
+  <li><strong>Acceso y costo:</strong> coordinar autorizaciones, farmacias especializadas, medicación de puente y opciones para ahorrar.</li>
+  <li><strong>Manejo de efectos secundarios:</strong> estrategias prácticas para temblores, malestar gastrointestinal, dolores de cabeza, problemas de sueño o ánimo—escalando al proveedor cuando sea necesario.</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li><strong>Missed/late doses:</strong> what to do next (do not double up—call for instructions).</li>
-  <li><strong>Trough confusion:</strong> which meds to hold before labs; bringing exact last-dose times to the draw.</li>
-  <li><strong>GI intolerance:</strong> mycophenolate-related nausea/diarrhea; food timing or formulation changes with the provider.</li>
-  <li><strong>Interaction hot spots:</strong> macrolide antibiotics, azole antifungals, certain seizure meds, calcium-channel blockers, St. John’s wort; antacids/magnesium binding some meds—separate by ~2 hours.</li>
-  <li><strong>Cost barriers:</strong> high copays, mail-order delays, vacation overrides, lost meds.</li>
+  <li><strong>Dosis olvidadas o tardías:</strong> qué hacer después (no duplicar dosis—llamar para instrucciones).</li>
+  <li><strong>Confusión sobre análisis en ayunas:</strong> qué medicamentos suspender antes de los análisis y llevar la hora exacta de la última dosis.</li>
+  <li><strong>Intolerancia gastrointestinal:</strong> náusea/diarrea por micofenolato; cambios de horario de comida o de formulación junto con el médico.</li>
+  <li><strong>Puntos críticos de interacción:</strong> antibióticos macrólidos, antifúngicos azólicos, algunos anticonvulsivos, bloqueadores de canales de calcio, hierba de San Juan; antiácidos/magnesio que interfieren—separar por ~2 horas.</li>
+  <li><strong>Barreras de costo:</strong> copagos altos, retrasos en envío, necesidad de recetas de emergencia, pérdida de medicamentos.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li><strong>Before starting</strong> any new prescription, OTC, or supplement.</li>
-  <li><strong>After ED/urgent-care visits</strong> to check new prescriptions for interactions.</li>
-  <li><strong>Before travel:</strong> extra supply, storage, and time-zone dosing plan.</li>
-  <li><strong>When side effects</strong> or costs make adherence hard.</li>
-  <li><strong>For refills:</strong> request a few business days ahead; sooner for specialty meds.</li>
+  <li><strong>Antes de empezar</strong> cualquier receta nueva, medicamento de venta libre o suplemento.</li>
+  <li><strong>Después de visitas a urgencias</strong> para revisar si los nuevos medicamentos tienen interacciones.</li>
+  <li><strong>Antes de viajar:</strong> surtido extra, instrucciones de almacenamiento y plan de horarios según zona horaria.</li>
+  <li><strong>Cuando los efectos secundarios</strong> o costos dificultan la adherencia.</li>
+  <li><strong>Para refills:</strong> pedir con unos días hábiles de anticipación; más tiempo para medicamentos especiales.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>They don’t change doses alone—final orders come from your provider.</li>
-  <li>They don’t diagnose or manage emergencies—use the clinic’s on-call line or 911 as directed.</li>
-  <li>They can’t override insurance rules—but they help with prior auths and appeals.</li>
+  <li>No cambian dosis por sí solos—las órdenes finales vienen del proveedor.</li>
+  <li>No diagnostican ni manejan emergencias—usa la línea de guardia de la clínica o llama al 911 según corresponda.</li>
+  <li>No pueden anular reglas del seguro—pero sí ayudan con autorizaciones y apelaciones.</li>
 </ul>
-
-
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
