--- a/es/hub/transplant/postop/staff/social-worker.html
+++ b/es/hub/transplant/postop/staff/social-worker.html
@@ -5,7 +5,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);} gtag('js',new Date()); gtag('config','G-JHT0DBJBHH',{transport_type:'beacon'});</script>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Post-Op Staff: Social Worker</title>
+  <title>Personal Postoperatorio: Trabajador Social</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -18,52 +18,52 @@
     <div data-include="/includes_es/transplant-postop-subnav.html"></div>
     <div data-include="/includes_es/transplant-postop-staff-subnav.html"></div>
 
-<h1>Social Worker</h1>
+<h1>Trabajador Social</h1>
 
-<h2>Short Description</h2>
+<h2>Descripción breve</h2>
 <p>
-  The social worker supports your mental health, caregiver plan, work/benefits paperwork,
-  and practical hurdles so recovery and follow-up stay on track.
+  El trabajador social apoya tu salud mental, plan de cuidadores, trámites laborales/beneficios
+  y obstáculos prácticos para que la recuperación y el seguimiento se mantengan en buen camino.
 </p>
 
-<h2>Main Priorities</h2>
+<h2>Prioridades principales</h2>
 <ul>
-  <li>Build a realistic caregiver plan (rides, home help, backups, respite options).</li>
-  <li>Guide work, school, and benefits paperwork (FMLA, disability, return-to-work notes).</li>
-  <li>Connect you to resources for transportation, lodging, medication costs, and community support.</li>
-  <li>Assess stress, anxiety, mood changes, sleep, and coping; arrange counseling referrals when needed.</li>
-  <li>Problem-solve barriers to adherence (childcare, schedules, housing/food insecurity).</li>
+  <li>Construir un plan realista de cuidadores (traslados, ayuda en casa, reemplazos, opciones de respiro).</li>
+  <li>Guiar en trámites de trabajo, escuela y beneficios (FMLA, discapacidad, notas de reincorporación).</li>
+  <li>Conectarte con recursos para transporte, alojamiento, costos de medicamentos y apoyo comunitario.</li>
+  <li>Evaluar estrés, ansiedad, cambios de ánimo, sueño y afrontamiento; coordinar derivaciones a consejería cuando sea necesario.</li>
+  <li>Resolver barreras para la adherencia (cuidado infantil, horarios, inseguridad alimentaria o de vivienda).</li>
 </ul>
 
-<h2>Issues They Work With</h2>
+<h2>Problemas con los que trabajan</h2>
 <ul>
-  <li>Overwhelm, worry, low mood, or steroid-related mood shifts.</li>
-  <li>Caregiver fatigue, family strain, or limited support at home.</li>
-  <li>Paperwork deadlines, employer communication, or school accommodations.</li>
-  <li>Financial stress affecting meds, labs, or visits; transportation/childcare gaps.</li>
-  <li>Substance use concerns; linkage to appropriate treatment if needed.</li>
+  <li>Agobio, preocupación, bajo ánimo o cambios de humor relacionados con esteroides.</li>
+  <li>Fatiga del cuidador, tensiones familiares o poco apoyo en casa.</li>
+  <li>Plazos de trámites, comunicación con empleadores o adaptaciones escolares.</li>
+  <li>Estrés financiero que afecta medicinas, análisis o visitas; brechas en transporte/cuidado infantil.</li>
+  <li>Preocupaciones por consumo de sustancias; enlace con tratamiento adecuado si es necesario.</li>
 </ul>
 
-<h2>When to Go to Them</h2>
+<h2>Cuándo acudir a ellos</h2>
 <ul>
-  <li>Any time stress or logistics make it hard to take meds, get labs, or keep appointments.</li>
-  <li>When forms, letters, or benefits decisions are due or confusing.</li>
-  <li>After a job/insurance change, move, or major family change.</li>
-  <li>If your caregiver is struggling or you need a backup plan.</li>
-  <li><strong>Come prepared:</strong> forms, deadlines, employer/insurer contacts, and your clinic’s medical record number.</li>
+  <li>Siempre que el estrés o la logística dificulten tomar medicinas, hacer análisis o asistir a citas.</li>
+  <li>Cuando haya formularios, cartas o decisiones de beneficios pendientes o confusas.</li>
+  <li>Después de un cambio de trabajo/seguro, mudanza o cambio familiar importante.</li>
+  <li>Si tu cuidador está teniendo dificultades o necesitas un plan de respaldo.</li>
+  <li><strong>Ven preparado:</strong> formularios, plazos, contactos de empleador/aseguradora y tu número de historia clínica en la clínica.</li>
 </ul>
 
-<h2>What They Don’t Handle (Boundaries)</h2>
+<h2>Lo que no manejan (límites)</h2>
 <ul>
-  <li>Medical diagnosis or medication dosing — that’s your clinical team.</li>
-  <li>Legal or financial decisions — they can refer/advocate but don’t provide legal advice or set coverage rules.</li>
-  <li>Emergency/crisis response — use your center’s urgent process or 911; they can help create a safety plan afterward.</li>
-  <li>Long-term therapy — they connect you to ongoing counseling if needed.</li>
+  <li>No hacen diagnósticos médicos ni ajustan dosis — eso corresponde al equipo clínico.</li>
+  <li>No toman decisiones legales o financieras — pueden derivar o abogar, pero no dan asesoría legal ni definen reglas de cobertura.</li>
+  <li>No responden a emergencias/crisis — usa el proceso urgente de tu centro o el 911; pueden ayudar a crear un plan de seguridad después.</li>
+  <li>No ofrecen terapia a largo plazo — te conectan con consejería continua si es necesario.</li>
 </ul>
-
 
   </main>
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
